--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
                 <p>{{ _('Discover new tastes and ideas for your next meal.') }}</p>
                 <!-- Dynamically populate the recent recipes -->
                 <ul>
-                    <li><a href="{{ url_for('recipes') }}">{{ _('Salmon Baked in Red Pesto') }}</a></li>
+                    <li><a href="{{ url_for('recipes') }}">{{ _('Grilled Salmon with Asparagus and Cherry Tomatoes') }}</a></li>
                     <!-- Additional recipes -->
                 </ul>
                 <a href="{{ url_for('recipes') }}" class="more-link">{{ _('View all recipes') }}</a>
