--- a/templates/landing.html
+++ b/templates/landing.html
@@ -164,13 +164,13 @@
                     </form>
                     <p id="footerThankYouMessage" style="display:none;">{{ _('Thank you for subscribing!') }}</p>
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/comprix.shop" target="_blank">
+                        <a href="https://www.facebook.com/comprix.online" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://www.instagram.com/comprix.shop/" target="_blank">
+                        <a href="https://www.instagram.com/comprix.online/" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>  
-                        <a href="https://www.linkedin.com/company/comprix-shop" target="_blank">
+                        <a href="https://www.linkedin.com/company/comprixonline" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                         </a>                         
                     </div>
