--- a/templates/base.html
+++ b/templates/base.html
@@ -63,13 +63,13 @@
         <h4>{{ _('Contact Us') }}</h4>
         <!--<p>Lorem ipsum</p>-->
         <div class="icons">
-            <a href="https://www.facebook.com/comprix.shop" target="_blank" class="instagram-icon">
+            <a href="https://www.facebook.com/comprix.online" target="_blank" class="instagram-icon">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://www.instagram.com/comprix.shop/" target="_blank" class="instagram-icon">
+            <a href="https://www.instagram.com/comprix.online/" target="_blank" class="instagram-icon">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/company/comprix-shop" target="_blank" class="instagram-icon">
+            <a href="https://www.linkedin.com/company/comprixonline" target="_blank" class="instagram-icon">
                 <i class="fab fa-linkedin-in"></i>
             </a>
         </div>
